--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
+<script src ="apples.js"></script>
 <script src ="blossoms.js"></script>
 <script src ="main.js"></script>
 <!--
