--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<canvas id="main" style="background:#ffffff;" height='600' width='1000'></canvas>
 	<canvas id="hidden" style="background:#ffffff; display:none;" height='600' width='1000'></canvas>
 	<br>
+	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
 
 	
 </body>
