--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 -->
 </head>
 <body onload="onload();">
-	 <img src="cardFinder.gif" alt="Gif of android app"> 
 	<canvas id="main" style="background:#ffffff;" height='600' width='1000'></canvas>
 	<canvas id="hidden" style="background:#ffffff; display:none;" height='600' width='1000'></canvas>
 	<br>
+	 <img src="cardFinderFirstHalf.gif" alt="Gif of android app"> 
 	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
 
 	
