--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<canvas id="hidden" style="background:#ffffff; display:none;" height='400' width='600'></canvas>
 	<br>
 	 <img src="cardFinderFirstHalf.gif" alt="Gif of android app"> 
+	 <img src="cardFinderSecondHalf.gif" alt="Gif of android app"> 
 	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
 
 	
