--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 <body onload="onload();">
 	<p>
-		This is a project that is still in its "proof of concept phase". The goal is to eventually get to a point where a person can scan a play card (like Magic: the Gathering) and immediately have it listen on eBay with almost no additional work. It's quite a fun project because there is a lot of interesting math in the many steps of image processing. The code is on my desktop, I can upload it to Github later if anyone wants to see it.
+		This is a project that is still in its "proof of concept" phase. The goal is to get to a point where a person can scan a playing card (like Magic: the Gathering) and immediately have it listed on eBay with almost no additional work. It's quite a fun project because there is a lot of interesting math in the many steps of image processing. The code is on my desktop, I can upload it to Github later if anyone wants to see it.
 	</p>
 	<br>
 	 <img src="cardFinderFirstHalf.gif" alt="Gif of android app"> 
 	 <img src="cardFinderSecondHalf.gif" alt="Gif of android app"> 
 	<br>
 	<p>
-		This is an animation of a maximum matching algorithm. As part of the hiring process for Google I had to solve a lot of challenges problems. The maximum matching problem was the hardest and most memorable for me. Code for the algorithm is on Github in Python and Javascript.
+		This is an animation of a maximum matching algorithm. As part of the hiring process for Google I had to solve a lot of challenging problems. The maximum matching problem was the hardest and most memorable for me. Code for the algorithm is on Github in Python and Javascript.
 	</p>
 	<br>
 	<canvas id="main" style="background:#ffffff;" height='600' width='1000'></canvas>
 	<canvas id="hidden" style="background:#ffffff; display:none;" height='600' width='1000'></canvas>
 	<br>
 	<p>
-	This last one was a little challenge I had. I wanted to communicate with the lego power functions from my personal computer devices. So I studied the IR protocol of Lego's product and made a simple sample program to show how it works. The code is on Github, and may be useful to someone someday. In the meantime here is proof that it works.	
+	This last one was a little problem I had. I wanted to communicate with the lego power functions from my personal computer devices. So I studied the IR protocol of Lego's product and made a simple sample program to show how it works. The code is on Github, and may be useful to some. In the meantime here is proof that it works.	
 	</p>
 	<br>
 	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
