--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="onload();">
 	<p>
-		This is a project that is still in its "proof of concept" phase. The goal is to get to a point where a person can scan a playing card (like Magic: the Gathering) and immediately have it listed on eBay with almost no additional work. It's quite a fun project because there is a lot of interesting math in the many steps of image processing. The code is on my desktop, I can upload it to Github later if anyone wants to see it.
+		This is a project that is still in its "proof of concept" phase. The goal is to get to a point where a person can scan a playing card (like Magic: the Gathering) and immediately have it listed on eBay with almost no additional work. It's quite a fun project because there is a lot of interesting math in the many steps of image processing. The code is on my desktop, I can upload it to Github later if anyone wants to see it. It's written in Java on android studio.
 	</p>
 	<br>
 	 <img src="cardFinderFirstHalf.gif" alt="Gif of android app"> 
