--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	</p>
 	<br>
 	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
+	<br>
+	<a href="in3d/linearRegression3d.html">more...</a>
 
 	
 </body>
