--- a/in3d/linearRegression3d.html
+++ b/in3d/linearRegression3d.html
@@ -14,6 +14,8 @@ div {
 	</style>
 </head>
 <body onload="">
+	<p>I took Andrew Ng's machine learning course a while ago, and I wanted to visualize the linear regression algorithm, and I have always enjoyed the mathematics of 3 dimensions, so this was a natural thing for me to do.</p>
+	
 	<canvas id="mainCanvas" width=800 height=600 border style="border-width:3"></canvas>
 	<canvas id="hCanvas" width=800 height=600 style="display:none;"></canvas>
 	<br>
