--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<br>
 	<br>
 	<p>
-	This last one was a little problem I had. I wanted to communicate with the lego power functions from my personal computer devices. I studied the IR protocol of Lego's product and made a simple sample program to show how it works. The code is on Github, and may be useful to some. In the meantime here is proof that it works.	
+	I wanted to communicate with the lego power functions from my personal computer devices. I studied the IR protocol of Lego's product and made a simple sample program to show how it works. The code is on Github, and may be useful to some. In the meantime here is proof that it works.	
 	</p>
 	<br>
 	 <img src="LegoPowerFunctions.gif" alt="Gif lego motor"> 
