--- a/gem_collector_3d_privacy_policy.html
+++ b/gem_collector_3d_privacy_policy.html
@@ -2,33 +2,23 @@
 <head>
 </head>
 <body>
-Privacy Policy
-
-Last Updated: February 6, 2023
-
-Introduction:
-This Privacy Policy outlines how we collect, use, and protect the information you provide when using our mobile game, including your Google Play ID. Your privacy is important to us, and we are committed to transparency about the data we collect and process about you.
-
-Data Collection:
-
-    Google Play ID: We collect your Google Play ID when you use our game. This ID is used to store your high scores and keep track of whether you have purchased premium content.
-    Scores and Purchase Information: We also collect and store your high scores and information about your purchases within the game.
-
-Use of Data:
-
-    High Scores: We store this information on the cloud so that if you log in from a different device you can keep your in-game progress.
-    Purchase Information: We store this information on the cloud so that if you log in from a different device you can access the premium content on that device.
-
-Data Protection:
-We take appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure, or destruction of data.
-
-Data Sharing:
-We do not share your personal data with any third parties, except as required by law.
-
-Changes to This Privacy Policy:
-We may update this Privacy Policy from time to time.
-
-Contact Us:
-If you have any questions about this Privacy Policy, please contact me at ddgyarados@gmail.com.
+<p>Privacy Policy</p>
+<p>Last Updated: February 6, 2023</p>
+<p>Introduction:</p>
+<p>This Privacy Policy outlines how we collect, use, and protect the information you provide when using our mobile game, including your Google Play ID. Your privacy is important to us, and we are committed to transparency about the data we collect and process about you.</p>
+<p>Data Collection:</p>
+<p>Google Play ID: We collect your Google Play ID when you use our game. This ID is used to store your high scores and keep track of whether you have purchased premium content.</p>
+<p>Scores and Purchase Information: We also collect and store your high scores and information about your purchases within the game.</p>
+<p>Use of Data:</p>
+<p>High Scores: We store this information on the cloud so that if you log in from a different device you can keep your in-game progress.</p>
+<p>Purchase Information: We store this information on the cloud so that if you log in from a different device you can access the premium content on that device.</p>
+<p>Data Protection:</p>
+<p>We take appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure, or destruction of data.</p>
+<p>Data Sharing:</p>
+<p>We do not share your personal data with any third parties, except as required by law.</p>
+<p>Changes to This Privacy Policy:</p>
+<p>We may update this Privacy Policy from time to time.</p>
+<p>Contact Us:</p>
+<p>If you have any questions about this Privacy Policy, please contact me at ddgyarados@gmail.com.</p>
 </body>
 </html>
