--- a/gem_collector_3d_privacy_policy.html
+++ b/gem_collector_3d_privacy_policy.html
@@ -30,9 +30,9 @@
       This Privacy Policy outlines how this application collects, uses, and protects any information recieved by the application.
     </p>
     <p><strong>Data Collection:</strong></p>
-    <p>No data is collected, shared or stored.</p>
+    <p>No data is collected, shared or stored outside of the installed device.</p>
     <p><strong>Changes to This Privacy Policy:</strong></p>
-    <p>I may update this Privacy Policy from time to time.</p>
+    <p>I may update this Privacy Policy from time to time. However, there are no plans to begin collecting data from users.</p>
     <p><strong>Contact Us:</strong></p>
     <p>
       If you have any questions about this Privacy Policy, please contact me at ddgyarados@gmail.com.
