vertex buffers conflicting across canvases, fixed

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 	</div>
 	<div id="gem_collector">
 		<div class="unit">
+			<!--<a class="info_p" href="https://play.google.com/store/apps/details?id=wasCom.wasExample2.gemcollector4">Google Play Store</p>
+			-->
+			<a class="info_p" href="https://apps.apple.com/us/app/gem-collector-3d/id6448584977">Apple App Store</p>
 			<div id="container">
 			<canvas id="gc3d_canvas" height=810 width=1440 style="border:0px solid black;"></canvas>
 		</div>
@@ -282,8 +285,6 @@ round_gl = round_canvas.getContext('webgl');
 
 <script src="heart_main.js"></script>
 <script src="glife.js"></script>
-<!--
--->
 <script>
 let assets = {}
 const drawable = {}
@@ -325,4 +326,6 @@ const Color = {
 <script src="gc3d/WorldSetRegion.js"></script>
 <script src="gc3d/MyGLRenderer.js"></script>
 <script src="gc3d/main.js"></script>
+<!--
+-->
 </html>
