used wrong html element

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="unit">
 			<!--<a class="info_p" href="https://play.google.com/store/apps/details?id=wasCom.wasExample2.gemcollector4">Google Play Store</p>
 			-->
-			<a class="info_p" href="https://apps.apple.com/us/app/gem-collector-3d/id6448584977">Apple App Store</p>
+			<a class="info_p" href="https://apps.apple.com/us/app/gem-collector-3d/id6448584977">Apple App Store</a>
 			<div id="container">
 			<canvas id="gc3d_canvas" height=810 width=1440 style="border:0px solid black;"></canvas>
 		</div>
