--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	padding: 10px 10px 10px 10px;
 	background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(139,139,241,1) 100%);
 	border-radius: 10px;
-	margin-top:13px;
 	width: fit-content;
+	margin: auto;
+	margin-top:13px;
 }
 .info_p{
 	font-size: 20px;
@@ -23,6 +24,8 @@
 	background-color: #cccccc;
 }
 #nav_bar {
+	margin: auto;
+	width: fit-content;
 	padding-top: 0px;
 	padding-bottom: 30px;
 }
