fixed some capitalization

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		<button class="nav_btn" id="gcp_b" onclick="page('gcp')">GC Prototype</button>
 		<button class="nav_btn" id="doodles_b" onclick="page('doodles')">Doodles</button>
 		<button class="nav_btn" id="cyber_roller_b" onclick="page('cyber_roller')">Cyber Roller</button>
-		<button class="nav_btn" id="simple_games_b" onclick="page('simple_games')">simple games</button>
-		<button class="nav_btn" id="tools_b" onclick="page('tools')">tools</button>
+		<button class="nav_btn" id="simple_games_b" onclick="page('simple_games')">Snake</button>
+		<button class="nav_btn" id="tools_b" onclick="page('tools')">Tools</button>
 		<button class="nav_btn" id="gem_craft_b" onclick="page('gem_craft')">Gem Crafting</button>
 	</div>
 	<br>
